# winauth-rs

winauth/: Cargo.toml
winauth/examples/: hyper_server.rs  hyper_server_cookie.rs
