[package]
name = "winauth"
description = "Windows Authentication in Rust (NTLMv2)"
repository = "https://github.com/steffengy/winauth-rs"
documentation = "https://docs.rs/winauth/"
version = "0.0.4"
authors = ["Steffen Butzer <steffen.butzer@outlook.com>"]
license = "MIT/Apache-2.0"
keywords = ["ntlm", "sspi", "winauth"]
edition = "2018"

[dependencies]
bitflags = "1.1"
byteorder = "1.2.0"
rand = "0.8"
md5 = "0.6.1"
base64 = { version = "0.13" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winerror", "sspi"] }

[dev-dependencies]
hyper = { version = "0.14", features = ["runtime", "server"] }
hyper-tls = "0.5"
reqwest= "0.11"
cfg-if = "0.1"
